@@ -36,7 +36,7 @@ namespace Chummer
             this.lblDescription = new System.Windows.Forms.Label();
             this.lblMaxNuyenLabel = new System.Windows.Forms.Label();
             this.tlpMain = new System.Windows.Forms.TableLayoutPanel();
-            this.cmdEditCharacterSetting = new Chummer.ButtonWithToolTip();
+            this.cmdEditCharacterSetting = new System.Windows.Forms.Button();
             this.lblCharacterSetting = new System.Windows.Forms.Label();
             this.tlpSummary = new System.Windows.Forms.TableLayoutPanel();
             this.lblBuildMethodLabel = new System.Windows.Forms.Label();
@@ -186,20 +186,13 @@ namespace Chummer
             this.cmdEditCharacterSetting.AutoSize = true;
             this.cmdEditCharacterSetting.AutoSizeMode = System.Windows.Forms.AutoSizeMode.GrowAndShrink;
             this.cmdEditCharacterSetting.Dock = System.Windows.Forms.DockStyle.Fill;
-            this.cmdEditCharacterSetting.Image = null;
-            this.cmdEditCharacterSetting.ImageDpi120 = null;
-            this.cmdEditCharacterSetting.ImageDpi144 = null;
-            this.cmdEditCharacterSetting.ImageDpi192 = null;
-            this.cmdEditCharacterSetting.ImageDpi288 = null;
-            this.cmdEditCharacterSetting.ImageDpi384 = null;
-            this.cmdEditCharacterSetting.ImageDpi96 = null;
             this.cmdEditCharacterSetting.Location = new System.Drawing.Point(523, 3);
             this.cmdEditCharacterSetting.MinimumSize = new System.Drawing.Size(80, 0);
             this.cmdEditCharacterSetting.Name = "cmdEditCharacterSetting";
             this.cmdEditCharacterSetting.Size = new System.Drawing.Size(80, 23);
             this.cmdEditCharacterSetting.TabIndex = 17;
+            this.cmdEditCharacterSetting.Tag = "String_ModifyEllipses";
             this.cmdEditCharacterSetting.Text = "Modify...";
-            this.cmdEditCharacterSetting.ToolTipText = "";
             this.cmdEditCharacterSetting.UseVisualStyleBackColor = true;
             this.cmdEditCharacterSetting.Click += new System.EventHandler(this.cmdEditCharacterOption_Click);
             // 
@@ -573,7 +566,7 @@ namespace Chummer
         private System.Windows.Forms.Label lblMaxNuyenLabel;
         private System.Windows.Forms.TableLayoutPanel tlpMain;
         private System.Windows.Forms.Label lblBuildMethodParamLabel;
-        private ButtonWithToolTip cmdEditCharacterSetting;
+        private System.Windows.Forms.Button cmdEditCharacterSetting;
         private System.Windows.Forms.Label lblCharacterSetting;
         private System.Windows.Forms.Button cmdOK;
         private System.Windows.Forms.Button cmdCancel;
